<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtIP" />

    <EditText
        android:id="@+id/editTextServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:inputType="text"
        android:text="10.201.4.1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextPort"
        android:layout_below="@+id/EditTextPort"
        android:text="@string/txtUser" />

    <EditText
        android:id="@+id/EditTextPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextServer"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text"
        android:text="1000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextServer"
        android:layout_below="@+id/editTextServer"
        android:text="@string/txtPort" />

    <EditText
        android:id="@+id/EditTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextUser"
        android:layout_below="@+id/EditTextUser"
        android:text="@string/txtMsg" />

    <EditText
        android:id="@+id/EditTextMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/ButtonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStart"
        android:layout_alignBottom="@+id/buttonStart"
        android:layout_toRightOf="@+id/buttonStart"
        android:text="@string/txtStop" />

    <Button
        android:id="@+id/ButtonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonStop"
        android:layout_alignBottom="@+id/ButtonStop"
        android:layout_toRightOf="@+id/ButtonStop"
        android:text="@string/txtSend" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextMsg"
        android:layout_below="@+id/EditTextMsg"
        android:text="@string/txtStart" />

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextMsg"
        android:layout_toRightOf="@+id/ButtonSend"
        android:text="@string/txtBack" />

</RelativeLayout>